[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Andrey Letenkov <andrey.letenkov@wefox.com>"]

[tool.poetry.dependencies]
python = "^3.9"
allure-pytest = "^2.9.45"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
